<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recording_button"
            style="?attr/floatingActionButtonSmallSecondaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/start_sequence_recording_button"
            app:srcCompat="@drawable/baseline_fiber_manual_record_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_record_button"
            style="?attr/floatingActionButtonSmallSecondaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/play_previous_record_button"
            app:srcCompat="@drawable/baseline_play_circle_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/render_record_button"
            style="?attr/floatingActionButtonSmallSecondaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/render_previous_record_button"
            app:srcCompat="@drawable/baseline_compress_24" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/prev_mode_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="start|center"
        android:background="@color/transparent"
        android:contentDescription="@string/prev_mode_button"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        app:tint="?colorOnBackground" />

    <Button
        android:id="@+id/help_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:contentDescription="@string/help_button"
        android:drawableEnd="@drawable/baseline_help_outline_24"
        android:drawableTint="?colorOnBackground" />
</FrameLayout>