<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sample_one"
                style="@style/Widget.Material3.FloatingActionButton.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/add_melody_sample_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sample_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_music_note_24" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sample_two"
                style="@style/Widget.Material3.FloatingActionButton.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/add_drums_sample_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sample_three"
                app:layout_constraintStart_toEndOf="@id/sample_one"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_drums" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sample_three"
                style="@style/Widget.Material3.FloatingActionButton.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/add_recorded_sample_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sample_four"
                app:layout_constraintStart_toEndOf="@id/sample_two"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_gesture_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sample_four"
                style="@style/Widget.Material3.FloatingActionButton.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/add_recorded_sample_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vis_button"
                app:layout_constraintStart_toEndOf="@id/sample_three"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_mic_24" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/library_button"
                style="@style/Widget.Material3.FloatingActionButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/open_samples_library_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vis_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_library_music_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/vis_button"
                style="@style/Widget.Material3.FloatingActionButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/open_samples_library_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/library_button"
                app:layout_constraintStart_toEndOf="@id/sample_four"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_visibility_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/samples_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wave_recycler"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/wave_background"
        android:backgroundTint="?colorSecondaryContainer"
        android:overScrollMode="never"
        android:padding="10dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/control_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</LinearLayout>